Forced layouts are slower when all siblings create their own formatting context. https://bugs.webkit.org/show_bug.cgi?id=308946 rdar://171545381

Reviewed by Alan Baradlay.

This PR optimizes RenderBlockFlow::collapseMargins() by returning early when margin
collapse with a child does not move the parent renderer.

The sibling walk looking for intruding floats in

addIntrudingFloatsFromPreviousBlocks

is only needed when the parent renderer is moved. Intruding floats should already
be handled in `rebuildFloatingObjectSetFromIntrudingFloats`

addIntrudingFloatsFromPreviousBlocks skips siblings that create their own formatting contexts,
creating an edge case where all siblings have their own formatting context (e.g contain:layout).

This causes us to keep skipping previous siblings, causing collapseMargins() to have
O(N^2) runtime for N siblings.

The fix is to return early from collapseMargins() when the logical top does not decrease
after collapsing margins as the sibling walk is not relevant in this case and can
be skipped entirely.

* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::collapseMargins):

Canonical link: https://commits.webkit.org/310173@main